<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomContact"/>

    <ListView
        android:id="@+id/choixChange"
        android:layout_width="match_parent"
        android:layout_height="422dp"
        android:choiceMode="singleChoice" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/boutonRetour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boutonText2"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/boutonChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeContact"
            android:layout_marginStart="50dp"/>


    </TableRow>

</LinearLayout>